<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="item"
            type="com.omkar.imagequery.db.Item" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="@{clickListener}"
        android:visibility="@{item.image.visibility()}"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:maxHeight="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@{item.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title_text_placeholder" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/search_image"
                android:src="@color/black"
                app:imageFromUrl="@{item.image.thumbnailLink}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_image_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxHeight="20dp"
                android:text="@{item.image.imageSize()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/textview_title"
                tools:text="@string/image_size_placeholder" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="@{item.snippet}"
                app:layout_constraintEnd_toEndOf="@id/expand"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/textview_image_size"
                tools:text="@string/snippet_placeholder" />

            <Button
                android:id="@+id/expand"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_arrow_drop_down_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/extras"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/imageView">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@{item.image.thumbnailLink}"
                    tools:text="@string/source_placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:text="@{item.pageLink}"
                    tools:text="@string/page_link_placeholder" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>