<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.omkar.imagequery.ui.ImageDetailsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corners"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false"
                app:toolbarId="@+id/toolbar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/thumbnail_image"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    app:imageFromUrl="@{viewModel.item.pageLink}"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corners"
            android:padding="8dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.item.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Title goes here" />

                <TextView
                    android:id="@+id/snippet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.item.snippet}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    tools:text="Snippet goes here" />

                <ImageView
                    android:id="@+id/size_ico"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/image_size_icon"
                    android:src="@drawable/ic_photo_size_select_large_black_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/snippet" />

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.item.image.imageSize()}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintStart_toEndOf="@id/size_ico"
                    app:layout_constraintTop_toBottomOf="@id/snippet"
                    tools:text="image dimen go here" />

                <ImageView
                    android:id="@+id/pageLink_ico"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/page_link_icon"
                    android:src="@drawable/ic_open_in_browser_black_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/size_ico" />

                <TextView
                    android:id="@+id/pageLink"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:autoLink="web"
                    android:text="@{viewModel.item.pageLink.trim()}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/size_ico"
                    app:layout_constraintTop_toBottomOf="@id/size_ico"
                    tools:text="pagelink goes here" />

                <ImageView
                    android:id="@+id/download_ico"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/image_size_icon"
                    android:src="@drawable/ic_insert_drive_file_black_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pageLink" />

                <TextView
                    android:id="@+id/download_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.item.image.byteSize + 'B'}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintStart_toEndOf="@id/size_ico"
                    app:layout_constraintTop_toBottomOf="@id/pageLink"
                    tools:text="Image Size goes here" />

                <ImageView
                    android:id="@+id/page_ico"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/home_page_icon"
                    android:src="@drawable/ic_language_black_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/download_ico" />

                <TextView
                    android:id="@+id/page"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:autoLink="web"
                    android:text="@{viewModel.item.image.contextLink}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/size_ico"
                    app:layout_constraintTop_toBottomOf="@id/download_size"
                    tools:text="Home page link goes here" />


                <TextView
                    android:id="@+id/host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:autoLink="web"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.item.displayLink}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintStart_toEndOf="@id/size_ico"
                    app:layout_constraintTop_toBottomOf="@id/page"
                    tools:text="host" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>